# artscii

./: Cargo.toml  DEV.md  README.md
.github/workflows/: release.yml
examples/: frame.rs  gif.rs  quick_start.rs  quickstart_gif.rs  quickstart_image.rs
src/: ascii.rs  canvas.rs  frame.rs  frames.rs  img.rs  main.rs  media.rs  utils.rs
src/core/: canvas.rs  charset.rs  frame.rs  mod.rs
src/core/decoder/: decoder.rs  gif.rs  image.rs  mod.rs
src/core/reader/: gif.rs  image.rs  mod.rs
