[package]
name = "artscii"
version = "0.1.0"
edition = "2024"
description = "A cli tool to generate ascii art."
readme = "README.md"
homepage = "https://github.com/theairbend3r/artscii"
repository = "https://github.com/theairbend3r/artscii"
license = "GPL-3.0 license"
keywords = ["ascii", "cli"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.51", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
crossterm = "0.29.0"
env_logger = "0.11.9"
image = "0.25.8"
log = "0.4.29"
