[package]
name = "artscii"
version = "0.1.0"
edition = "2024"
description = "A cli tool to generate ascii art."
readme = "README.md"
homepage = "https://github.com/theairbend3r/artscii"
repository = "https://github.com/theairbend3r/artscii"
license = "GPL-3.0"
keywords = ["ascii", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "artscii"
path = "src/bin/cli/main.rs"
required-features = ["cli"]

[dependencies]
anyhow = "1.0.102"
# === following are cli only dependencies =============================
clap = { version = "4.5.51", features = ["derive"], optional = true }
clap-verbosity-flag = { version = "3.0.4", optional = true }
crossterm = { version = "0.29.0", optional = true }
env_logger = { version = "0.11.9", optional = true }
# =====================================================================
image = "0.25.8"
log = "0.4.29"

[features]
default = []
cli = ["clap", "clap-verbosity-flag", "crossterm", "env_logger"]

[profile.release]
strip = "symbols"
lto = "fat"
panic = "abort"
